# cli-2p-tictactoe

./: .gitignore  CMakeLists.txt  README.md  logs.txt  note.txt
1.0-MVP/: logs.txt
1.2-AI-WO/: .gitignore  CMakeLists.txt
1.2-AI-WO/src/: CMakeLists.txt  main.cpp
1.2-AI-WO/src/gameManager/: gameManager.cpp
PACKAGE/: logs.txt
VERSIONS/: note.txt
VERSIONS/1.0 (MVP)/include/: gameManager.h
VERSIONS/1.0-MVP/: README.md
VERSIONS/1.0-MVP/src/: CMakeLists.txt  gameManager.cpp
VERSIONS/1.1-CLS-WO/src/: gameManager.cpp
dependencyMap/: dependencyMap.excalidraw
gameManager/: CMakeLists.txt
include/: gameManager.h
inputHandler/: CMakeLists.txt
processGameInput/: CMakeLists.txt
renderer/: CMakeLists.txt
src/: CMakeLists.txt  gameManager.cpp  main.cpp
